# bayes_elo

./: Cargo.toml  README.md
src/: delta.rs  elo.rs  expectation.rs  lib.rs  probability.rs  result_representation.rs
